--- a/test.yml
+++ b/test.yml
@@ -1,10 +1,10 @@
 ---
-- hosts: servers
+- hosts: app
   become: yes
   gather_facts: no
   vars:
       git_repo_url: https://github.com/Alexklashitsky/bootcamp-app.git
-      repo_path: /etc/www
+      repo_path: /home/app/web
       repo_branch: master
   tasks: 
   - name: Run the equivalent of "apt-get update" as a separate step
@@ -17,12 +17,12 @@
     with_items:
       - git
       - nodejs
-  # - name: Clone a private repository
-  #   git:
-  #     repo: "{{ git_repo_url }}"
-  #     dest: "{{ repo_path }}"
-  #       # version: "{{ repo_branch }}"
-  #     accept_hostkey: yes
+  - name: Clone a private repository
+    git:
+      repo: "{{ git_repo_url }}"
+      dest: "{{ repo_path }}"
+        # version: "{{ repo_branch }}"
+      accept_hostkey: yes
   - name: Build app
     command: sudo npm i
     args:
@@ -31,17 +31,17 @@
     npm:
       name: pm2 
       global: yes
-  # - name: delete existing pm2 processes if running
-  #   command: "pm2 kill"
-  #   ignore_errors: True
-    # become: yes
-    # become_user: rw_user
   - name: start pm2 process
-    command: 'pm2 start /etc/www/src/index.js'
-    become: yes
-    become_user: rw_user
-    # environment:
-    # NODE_ENV: "{{server_env}}"
+    command: sudo pm2 start /home/app/web/src/index.js
+  # - name: make  me smile start at system restart
+  #   become: true
+  #   command: pm2 startup systemd -u app --hp /home/app
+  # - name: systemd
+  #   command: pm2 startup systemd
+  # - name: path to save
+  #   command: sudo env PATH=$PATH:/usr/bin /usr/lib/node_modules/pm2/bin/pm2 startup systemd -u app --hp /home/app
+  # - name: save
+  #   command: pm2 save
 
-
+  
 
